--- a/study/science.html
+++ b/study/science.html
@@ -62,6 +62,33 @@
         height: 220px;
       }
     }
+
+    .features {
+      margin-top: 60px;
+      width: 90%;
+      max-width: 720px;
+    }
+
+    .features h3 {
+      font-size: 1.6rem;
+      color: #004d40;
+      margin-bottom: 10px;
+    }
+
+    .features ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .features li {
+      background: #ffffffaa;
+      border-left: 6px solid #4caf50;
+      margin-bottom: 10px;
+      padding: 10px 15px;
+      border-radius: 12px;
+      font-size: 1.1rem;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+    }
   </style>
 </head>
 <body>
@@ -77,13 +104,239 @@
   <div class="video-container">
     <iframe src="https://www.youtube.com/embed/Jy2bLuZU8ps" allowfullscreen></iframe>
   </div>
-  <div class="video-container">
-    <iframe src="https://www.youtube.com/embed/0UqHoagKXts" allowfullscreen></iframe>
-  </div>
-
+ 
   <h2>Physics</h2>
   <div class="video-container">
-    <iframe src="https://www.youtube.com/embed/bmzDsWMSCTk" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/jC6MW9KOQvU" allowfullscreen></iframe>
   </div>
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/CfxfW64P04s" allowfullscreen></iframe>
+  </div>
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/yeFQ2Ce_nKo" allowfullscreen></iframe>
+  </div>
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/bGFE2Z-VVM8" allowfullscreen></iframe>
+  </div>
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/UpXKKEbCByA" allowfullscreen></iframe>
+  </div>
+
+  <div class="features">
+    <h3>✨ Zen Features Experimental (beta):</h3>
+    <ul>
+      <li>⏱ Pomodoro Timer - Focus hard, rest smart</li>
+      <li>⭐ Motivation Panel - Daily Ayanokoji-level quotes</li>
+      <li>🏆 Reward System - Earn XP, unlock wallpapers</li>
+      <li>🏋️ Habit Tracker - Build your 1% growth</li>
+      <li>🚀 Quick Notes Button - Jot thoughts instantly</li>
+      <li>⚖ Study Streak Counter - Don’t break the chain!</li>
+    </ul>
+  </div>
+</body>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      padding: 40px 20px;
+      font-family: 'Outfit', sans-serif;
+      background: linear-gradient(120deg, #e0f7fa, #f1f8e9);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: #333;
+    }
+
+    h1 {
+      font-size: 3rem;
+      font-weight: 600;
+      margin-bottom: 10px;
+      color: #004d40;
+      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    h2 {
+      font-size: 2rem;
+      font-weight: 400;
+      margin-top: 40px;
+      color: #00695c;
+    }
+
+    .video-container {
+      background: rgba(255, 255, 255, 0.25);
+      backdrop-filter: blur(15px);
+      border-radius: 20px;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
+      padding: 20px;
+      margin: 20px 0;
+      max-width: 720px;
+      width: 90%;
+      transition: all 0.3s ease;
+    }
+
+    .video-container:hover {
+      transform: scale(1.02);
+      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.15);
+    }
+
+    iframe {
+      width: 100%;
+      height: 400px;
+      border: none;
+      border-radius: 12px;
+    }
+
+    @media (max-width: 600px) {
+      iframe {
+        height: 220px;
+      }
+    }
+
+    .section {
+      width: 100%;
+      max-width: 720px;
+      margin-top: 30px;
+    }
+
+    .pomodoro, .quote-box, .xp-tracker {
+      background: #ffffffc9;
+      border-radius: 16px;
+      padding: 20px;
+      margin-top: 20px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(8px);
+    }
+
+    .pomodoro h3, .quote-box h3, .xp-tracker h3 {
+      color: #00796b;
+      margin-bottom: 10px;
+    }
+
+    .timer {
+      font-size: 2rem;
+      font-weight: 600;
+    }
+
+    .controls button {
+      margin: 10px 8px;
+      padding: 8px 16px;
+      font-size: 1rem;
+      border: none;
+      border-radius: 8px;
+      background: #004d40;
+      color: white;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .controls button:hover {
+      background: #00695c;
+    }
+
+    .quote {
+      font-style: italic;
+      font-size: 1.1rem;
+    }
+
+    .xp-input {
+      width: 100%;
+      padding: 8px;
+      margin-top: 10px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
+
+    .checkbox {
+      margin: 10px 0;
+    }
+
+    .toggle-btn {
+      background: #00695c;
+      color: white;
+      border: none;
+      padding: 10px 16px;
+      border-radius: 12px;
+      margin-bottom: 10px;
+      cursor: pointer;
+    }
+
+    .hidden {
+      display: none;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="section pomodoro">
+    <h3>⏳ Pomodoro Timer</h3>
+    <div class="timer" id="timer">25:00</div>
+    <div class="controls">
+      <button onclick="startTimer()">Start</button>
+      <button onclick="pauseTimer()">Pause</button>
+      <button onclick="resetTimer()">Reset</button>
+    </div>
+  </div>
+
+  <div class="section quote-box">
+    <h3>🌟 Daily Motivation</h3>
+    <div class="quote" id="quote">"Push yourself, because no one else is going to do it for you."</div>
+  </div>
+
+  <div class="section xp-tracker">
+    <h3>🎯 XP Tracker</h3>
+    <label>XP Gained Today:</label>
+    <input type="number" class="xp-input" placeholder="e.g. 150 XP" />
+    <div class="checkbox"><input type="checkbox" /> Chemistry Complete ✅</div>
+    <div class="checkbox"><input type="checkbox" /> Physics Complete ✅</div>
+    <div class="checkbox"><input type="checkbox" /> Pomodoro Session ✅</div>
+  </div>
+
+  <script>
+    let timerInterval;
+    let timeLeft = 1500;
+    let isRunning = false;
+
+    function updateTimerDisplay() {
+      const minutes = Math.floor(timeLeft / 60).toString().padStart(2, '0');
+      const seconds = (timeLeft % 60).toString().padStart(2, '0');
+      document.getElementById('timer').innerText = `${minutes}:${seconds}`;
+    }
+
+    function startTimer() {
+      if (!isRunning) {
+        isRunning = true;
+        timerInterval = setInterval(() => {
+          if (timeLeft > 0) {
+            timeLeft--;
+            updateTimerDisplay();
+          } else {
+            clearInterval(timerInterval);
+            alert('Pomodoro complete! Time for a break.');
+            isRunning = false;
+            timeLeft = 1500;
+            updateTimerDisplay();
+          }
+        }, 1000);
+      }
+    }
+
+    function pauseTimer() {
+      clearInterval(timerInterval);
+      isRunning = false;
+    }
+
+    function resetTimer() {
+      pauseTimer();
+      timeLeft = 1500;
+      updateTimerDisplay();
+    }
+
+    function toggleSection(id) {
+      const section = document.getElementById(id);
+      section.classList.toggle("hidden");
+    }
+
+    updateTimerDisplay();
+  </script>
 </body>
 </html>
