--- a/blogging/index.html
+++ b/blogging/index.html
@@ -3,16 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
+    <title>Locate to all my websites</title>
+
+    <!-- ✅ Importing Outfit Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet">
+
+    <style> 
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Outfit', sans-serif;
+            background-color: #f0f0f0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            gap: 20px;
+        }
+
+        h1 {
+            font-size: 32px;
+            margin-bottom: 40px;
+        }
+
+        .locate {
+            position: relative;
+            display: inline-block;
+            background-color: #fff;
+            padding: 12px 24px;
+            border-radius: 12px;
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        a {
+            text-decoration: none;
+            color: black;
+            font-size: 20px;
+        }
+
+        a:visited {
+            color: blue;
+        }
+
+        .locate:hover {
+            transform: scale(1.05) rotate(-1deg);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+        }
+
+        /* 🔥 Tooltip */
+        .locate::after {
+            content: "Yes click me please I am clickable don't think of me as useless";
+            position: absolute;
+            bottom: 130%;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: #333;
+            color: #fff;
+            padding: 8px 12px;
+            border-radius: 8px;
+            font-size: 14px;
+            white-space: nowrap;
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.4s ease;
+            z-index: 10;
+        }
+
+        .locate:hover::after {
+            opacity: 1;
+        }
+    </style>
 </head>
 <body>
-    <h1>Change of Habits for More Focus</h1>
-<h2>1. Single tasking</h2>
-<p>In this world we are often told that to be more productive we must be able to do multiples tasks at once but tbh our attention drops exponentially depending on the number of tasks we are actaully focusing on. Our brain just creates and illusion that we are multitasking but in reality we are shifting our focus from one taks to another so quickly that we our attention get so fucked up that you can't even imagine.This also includes listening to music while working or watching something on TV while eating. Make are rule from now. ONE THING AT A TIME. </p>
-<h2>2. </h2>
-<p></p>
+    
+    <h1>🌐 Navigate My Web Tools</h1>
 
-    <link rel="stylesheet" href="style.css">
+    <div class="locate"><a href="animetime.html">Anime time</a></div>
+    <div class="locate"><a href="binary.html">Convert into and from binary</a></div>
+    <div class="locate"><a href="index2.html">Blog</a></div>
+    <div class="locate"><a href="videotime.html">Video Time Calculator</a></div>
+
 </body>
 </html>
